[tool.poetry]
name = "vacancieshhru"
version = "0.1.0"
description = ""
authors = ["Sergunin Vitaliy <sergunin_v@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.17.0"
pytest = "^8.4.1"
isort = "^6.0.1"
pytest-cov = "^6.2.1"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
